add skip to category and add endpoint get all category have skip true
